--- a/html/home.html
+++ b/html/home.html
@@ -25,7 +25,9 @@
         </div>
     </div>
     <div class="container">
-
+        <div class="title">
+            GoMaR
+        </div>
     </div>
 </body>
 
