--- a/html/home.html
+++ b/html/home.html
@@ -7,7 +7,7 @@
 
     <title>GoMaR</title>
     <link rel="stylesheet" href="../css/styles.css">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 </head>
 
 <body>
@@ -73,9 +73,19 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="central-container scrollable">
         <div class="title">
             GoMaR
+        </div>
+        <div class="description">
+            <p>This application is intended for people of all ages and wants to inform and test the user
+                on good manners. For a start, you need to register to have a better view on your points of
+                interest. There is a section with articles worth reading to enrich your behavior in different
+                situations. After reading more articles and information on the site, there are several tests
+                depending on the category you choose to test what you have left after reading.
+                At the same time, there is a section where you can view the score obtained according to the
+                category chosen.
+            </p>
         </div>
     </div>
 
