Update test page

--- a/html/test.html
+++ b/html/test.html
@@ -27,20 +27,23 @@
     <div class="central-container scrollable">
         <div class="quiz-question">
             <p class="question">
-                Cum ar trebui sa te comporti la restaurant?
+                How we should behave at the restaurant?
             </p>
         </div>
         <div class="quiz-selector">
             <div class="answer">
-                <div class="icon">                 
+                <div class="icon">
                 </div>
-                <span class="sentence">Sa ne purtam elegant</span>
+                <span class="sentence">We should behave elegant</span>
             </div>
             <div class="answer">
-                <div class="icon">                 
+                <div class="icon">
                 </div>
-                <span class="sentence">Sa ne purtam normal</span>
+                <span class="sentence">We should behave like in generally</span>
             </div>
+        </div>
+        <div>
+            <span class="answer-btn" onclick="window.location.href = 'text.html';">Answer</span>
         </div>
     </div>
 </body>
