--- a/html/test.html
+++ b/html/test.html
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div>
-            <span class="answer-btn" onclick="window.location.href = 'text.html';">Answer</span>
+            <span class="answer-btn" onclick="window.location.href = 'home.html';">Answer</span>
         </div>
     </div>
 </body>
