--- a/html/home.html
+++ b/html/home.html
@@ -15,10 +15,10 @@
         <div class="container">
             <img alt="GoMar Logo" src="../resources/logo.svg" class="logo">
             <div class="right-section">
-                <div class="btn">
+                <div class="btn" onclick="window.location.href = 'login.html';">
                     Login
                 </div>
-                <div class="btn">
+                <div class="btn" onclick="window.location.href = 'register.html';">
                     Register
                 </div>
             </div>
