--- a/html/login.html
+++ b/html/login.html
@@ -15,15 +15,15 @@
             <img alt="GoMar Logo" src="../resources/logo.svg" class="logo">
             <div class="right-section">
                 <div class="btn">
-                    Statistics
+                    Login
                 </div>
                 <div class="btn">
-                    Log out
+                    Register
                 </div>
             </div>
         </div>
     </div>
-    <div class="center">
+    <div class="central-container">
         <div class="boxcontent">
            <form name="form" action="./login.html" method="post">
 					<label><b>Username</b></label>
@@ -36,8 +36,8 @@
 					<input type="password" placeholder="Enter Password" name="password" required> 
 						
             <p style="text-align:center;">
-                 <input class="button" type="submit" onclick="window.location.href = 'userCVs.html';" value="Login"/> or 
-                 <input class="button"  type="submit" onclick="window.location.href = 'pagina1.html';" value="Sing in"/>
+                 <input class="button" type="submit" onclick="window.location.href = 'home.html';" value="Sing in"/> or 
+                 <input class="button"  type="submit" onclick="window.location.href = 'register.html';" value="Register"/>
 				 <label >
                       <input type="checkbox" checked="checked" name="remember" style="text-align:center;"> Remember me
                  </label>
