Add register page and update information

--- a/html/information.html
+++ b/html/information.html
@@ -32,32 +32,40 @@
             <ul>
                 <li>
                     <div class="title-of-article">Friendships nowadays</div>
-                    <img class="image" src="../resources/truefriendship.png">
-                    <p class="links">If you want to read it.
-                    <a href="https://medium.com/@nlee8989/true-friendship-the-very-definition-changing-in-modern-day-society-528cce8a09c2">Click here</a>
-                    </p>
+                    <!-- <img class="image" src="../resources/truefriendship.png"> -->
+                    <p class="links">(Click on the image if you want to visit our resources.) </p>
+                    <a href="https://medium.com/@nlee8989/true-friendship-the-very-definition-changing-in-modern-day-society-528cce8a09c2">
+                        <img class="image" src="../resources/truefriendship.png">
+                    </a>
+                   
                 </li>
                 <li>
                     <div class="title-of-article">Modern friendships</div>
-                    <img class="image" src="../resources/modernfriendship.png">
-                    <p class="links">If you want to read it.
-                    <a href="https://www.theguardian.com/lifeandstyle/2014/oct/31/column-change-life-modern-friendship-oliver-burkeman">Click here</a>
-                    </p>
+                    <!-- <img class="image" src="../resources/modernfriendship.png"> -->
+                    <!-- <p class="links">If you want to read it. -->
+                    <a href="https://www.theguardian.com/lifeandstyle/2014/oct/31/column-change-life-modern-friendship-oliver-burkeman">
+                        <img class="image" src="../resources/modernfriendship.png">
+                    </a>
+                    <!-- </p> -->
 
                 </li>
                 <li>
                     <div class="title-of-article">The importance of friends</div>
-                    <img class="image" src="../resources/importanceoffriendship.png">
-                    <p class="links">If you want to read it.
-                    <a href="https://www.psychologytoday.com/us/blog/in-flux/201605/the-importance-friends">Click here</a>
-                    </p>
+                    <!-- <img class="image" src="../resources/importanceoffriendship.png"> -->
+                    <!-- <p class="links">If you want to read it. -->
+                    <a href="https://www.psychologytoday.com/us/blog/in-flux/201605/the-importance-friends">
+                        <img class="image" src="../resources/importanceoffriendship.png">
+                    </a>
+                    <!-- </p> -->
                 </li>
                 <li>
                     <div class="title-of-article">International day of friendship</div>
-                    <img class="image" src="../resources/internationaldayofriendship.png">
-                    <p class="links">If you want to read it.
-                    <a href="https://learnenglish.britishcouncil.org/general-english/magazine/international-day-of-friendship">Click here</a>
-                    </p>
+                    <!-- <img class="image" src="../resources/internationaldayofriendship.png"> -->
+                    <!-- <p class="links">If you want to read it. -->
+                    <a href="https://learnenglish.britishcouncil.org/general-english/magazine/international-day-of-friendship">
+                        <img class="image" src="../resources/internationaldayofriendship.png">
+                    </a>
+                    <!-- </p> -->
                 </li>
             </ul>
         </div>
