Improve login and information pages

--- a/html/information.html
+++ b/html/information.html
@@ -15,10 +15,10 @@
         <div class="container">
             <img alt="GoMar Logo" src="../resources/logo.svg" class="logo">
             <div class="right-section">
-                <div class="btn">
+                <div class="btn" onclick="window.location.href = 'statistics.html';">
                     Statistics
                 </div>
-                <div class="btn">
+                <div class="btn" onclick="window.location.href = 'home.html';">
                     Log out
                 </div>
             </div>
@@ -32,7 +32,6 @@
             <ul>
                 <li>
                     <div class="title-of-article">Friendships nowadays</div>
-                    <!-- <img class="image" src="../resources/truefriendship.png"> -->
                     <p class="links">(Click on the image if you want to visit our resources.) </p>
                     <a href="https://medium.com/@nlee8989/true-friendship-the-very-definition-changing-in-modern-day-society-528cce8a09c2">
                         <img class="image" src="../resources/truefriendship.png">
@@ -41,31 +40,22 @@
                 </li>
                 <li>
                     <div class="title-of-article">Modern friendships</div>
-                    <!-- <img class="image" src="../resources/modernfriendship.png"> -->
-                    <!-- <p class="links">If you want to read it. -->
                     <a href="https://www.theguardian.com/lifeandstyle/2014/oct/31/column-change-life-modern-friendship-oliver-burkeman">
                         <img class="image" src="../resources/modernfriendship.png">
                     </a>
-                    <!-- </p> -->
 
                 </li>
                 <li>
                     <div class="title-of-article">The importance of friends</div>
-                    <!-- <img class="image" src="../resources/importanceoffriendship.png"> -->
-                    <!-- <p class="links">If you want to read it. -->
                     <a href="https://www.psychologytoday.com/us/blog/in-flux/201605/the-importance-friends">
                         <img class="image" src="../resources/importanceoffriendship.png">
                     </a>
-                    <!-- </p> -->
                 </li>
                 <li>
                     <div class="title-of-article">International day of friendship</div>
-                    <!-- <img class="image" src="../resources/internationaldayofriendship.png"> -->
-                    <!-- <p class="links">If you want to read it. -->
                     <a href="https://learnenglish.britishcouncil.org/general-english/magazine/international-day-of-friendship">
                         <img class="image" src="../resources/internationaldayofriendship.png">
                     </a>
-                    <!-- </p> -->
                 </li>
             </ul>
         </div>
