--- a/html/login.html
+++ b/html/login.html
@@ -27,7 +27,7 @@
 					<label><b>Password</b></label>
 					<input type="password" placeholder="Enter Password" name="password" required> 
 						
-            <p style="text-align:center;">
+            <p class="p">
                  <input class="button" type="submit" onclick="window.location.href = 'home.html';" value="Log in"/> or 
                  <input class="button"  type="submit" onclick="window.location.href = 'register.html';" value="Register"/>
 				 <label >
