--- a/html/test.html
+++ b/html/test.html
@@ -15,10 +15,10 @@
         <div class="container">
             <img alt="GoMar Logo" src="../resources/logo.svg" class="logo">
             <div class="right-section">
-                <div class="btn">
+                <div class="btn" onclick="window.location.href = 'statistics.html';">
                     Statistics
                 </div>
-                <div class="btn">
+                <div class="btn" onclick="window.location.href = 'home.html';">
                     Log out
                 </div>
             </div>
