--- a/html/login.html
+++ b/html/login.html
@@ -15,7 +15,7 @@
             <img alt="GoMar Logo" src="../resources/logo.svg" class="logo">
         </div>
     </div>
-    <div class="central-container">
+    <div class="central-container scrollable">
         <div class="boxcontent">
            <form name="form" action="./login.html" method="post">
 					<label><b>Username</b></label>
