--- a/html/profile.html
+++ b/html/profile.html
@@ -15,7 +15,7 @@
             <img alt="GoMar Logo" src="../resources/logo.svg" class="logo">
         </div>
     </div>
-    <div class="central-container">
+    <div class="central-container scrollable">
         
         <div id="slider-1" class="slide">
             <div class="boxcontent">
@@ -62,7 +62,7 @@
         <div id="slider-3" class="slide">
             <div class="boxcontent">
                 <form name="form" action="./register.html" method="post">
-                        <label><b>Contry</b></label>
+                        <label><b>Country</b></label>
                         <input type="text" placeholder="Enter Username" name="username" required>
                         
                         <label><b>Town</b></label>
