--- a/html/test.html
+++ b/html/test.html
@@ -27,19 +27,19 @@
     <div class="central-container scrollable">
         <div class="quiz-question">
             <p class="question">
-                How we should behave at the restaurant?
+                How should we behave at the restaurant?
             </p>
         </div>
         <div class="quiz-selector">
             <div class="answer">
                 <div class="icon">
                 </div>
-                <span class="sentence">We should behave elegant</span>
+                <span class="sentence">We should follow a certain etiquette</span>
             </div>
             <div class="answer">
                 <div class="icon">
                 </div>
-                <span class="sentence">We should behave like in generally</span>
+                <span class="sentence">We should behave normally</span>
             </div>
         </div>
         <div>
