--- a/html/home.html
+++ b/html/home.html
@@ -16,10 +16,12 @@
             <img alt="GoMar Logo" src="../resources/logo.svg" class="logo">
             <div class="right-section">
                 <div class="btn" onclick="window.location.href = 'login.html';">
-                    Login
+                    <img alt="GoMar Login" src="../resources/login-logo.svg" class="icon">
+                    <div class="btn-section">| Login</div>
                 </div>
                 <div class="btn" onclick="window.location.href = 'register.html';">
-                    Register
+                    <img alt="GoMar Register" src="../resources/register-logo.svg" class="icon">
+                    <div class="btn-section">| Register</div>
                 </div>
             </div>
         </div>
@@ -38,7 +40,12 @@
                 category chosen.
             </p>
         </div>
+        <footer>
+        <div class="publicity">Icons made by <a href="https://www.flaticon.com/authors/icongeek26" title="Icongeek26">Icongeek26</a> from
+            <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+        </footer>
     </div>
+
 
 </body>
 
