Improve responsive navbar

--- a/html/home.html
+++ b/html/home.html
@@ -16,11 +16,11 @@
             <img alt="GoMar Logo" src="../resources/logo.svg" class="logo">
             <div class="right-section">
                 <div class="btn" onclick="window.location.href = 'login.html';">
-                    <img alt="GoMar Login" src="../resources/login-logo.svg" class="icon">
+                    <img alt="GoMar Login" src="../resources/login-icon.svg" class="icon">
                     <div class="btn-section">| Login</div>
                 </div>
                 <div class="btn" onclick="window.location.href = 'register.html';">
-                    <img alt="GoMar Register" src="../resources/register-logo.svg" class="icon">
+                    <img alt="GoMar Register" src="../resources/register-icon.svg" class="icon">
                     <div class="btn-section">| Register</div>
                 </div>
             </div>
@@ -40,10 +40,7 @@
                 category chosen.
             </p>
         </div>
-        <footer>
-        <div class="publicity">Icons made by <a href="https://www.flaticon.com/authors/icongeek26" title="Icongeek26">Icongeek26</a> from
-            <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-        </footer>
+
     </div>
 
 
