--- a/html/test.html
+++ b/html/test.html
@@ -4,7 +4,6 @@
 
 <head>
     <meta charset="utf-8">
-
     <title>GoMaR</title>
     <link rel="stylesheet" href="../css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
@@ -16,10 +15,12 @@
             <img alt="GoMar Logo" src="../resources/logo.svg" class="logo">
             <div class="right-section">
                 <div class="btn" onclick="window.location.href = 'statistics.html';">
-                    Statistics
+                    <img alt="GoMar Statistics" src="../resources/statistics-icon.svg" class="icon">
+                    <div class="btn-section">| Statistics</div>
                 </div>
                 <div class="btn" onclick="window.location.href = 'home.html';">
-                    Log out
+                    <img alt="GoMar Logout" src="../resources/logout-icon.svg" class="icon">
+                    <div class="btn-section">| Log out</div>
                 </div>
             </div>
         </div>
