--- a/html/information.html
+++ b/html/information.html
@@ -16,10 +16,12 @@
             <img alt="GoMar Logo" src="../resources/logo.svg" class="logo">
             <div class="right-section">
                 <div class="btn" onclick="window.location.href = 'statistics.html';">
-                    Statistics
+                    <img alt="GoMar Statistics" src="../resources/statistics-icon.svg" class="icon">
+                    <div class="btn-section">| Statistics</div>
                 </div>
                 <div class="btn" onclick="window.location.href = 'home.html';">
-                    Log out
+                    <img alt="GoMar Logout" src="../resources/logout-icon.svg" class="icon">
+                    <div class="btn-section">| Log out</div>
                 </div>
             </div>
         </div>
