--- a/html/home.html
+++ b/html/home.html
@@ -17,32 +17,32 @@
             <div class="right-section">
                 <div class="btn" onclick="window.location.href = 'login.html';">
                     <img alt="GoMar Login" src="../resources/login-icon.svg" class="icon">
-                    <div class="btn-section">| Login</div>
+                    <div class="btn-label">| Login</div>
                 </div>
                 <div class="btn" onclick="window.location.href = 'register.html';">
                     <img alt="GoMar Register" src="../resources/register-icon.svg" class="icon">
-                    <div class="btn-section">| Register</div>
+                    <div class="btn-label">| Register</div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="central-container scrollable">
-        <div class="title">
-            GoMaR
+    <div class="container">
+        <div class="central-container scrollable">
+            <div class="title">
+                GoMaR
+            </div>
+            <div class="description">
+                <p>This application is intended for people of all ages and wants to inform and test the user
+                    on good manners. For a start, you need to register to have a better view on your points of
+                    interest. There is a section with articles worth reading to enrich your behavior in different
+                    situations. After reading more articles and information on the site, there are several tests
+                    depending on the category you choose to test what you have left after reading.
+                    At the same time, there is a section where you can view the score obtained according to the
+                    category chosen.
+                </p>
+            </div>
         </div>
-        <div class="description">
-            <p>This application is intended for people of all ages and wants to inform and test the user
-                on good manners. For a start, you need to register to have a better view on your points of
-                interest. There is a section with articles worth reading to enrich your behavior in different
-                situations. After reading more articles and information on the site, there are several tests
-                depending on the category you choose to test what you have left after reading.
-                At the same time, there is a section where you can view the score obtained according to the
-                category chosen.
-            </p>
-        </div>
-
     </div>
-
 
 </body>
 
