--- a/html/information.html
+++ b/html/information.html
@@ -17,49 +17,54 @@
             <div class="right-section">
                 <div class="btn" onclick="window.location.href = 'statistics.html';">
                     <img alt="GoMar Statistics" src="../resources/statistics-icon.svg" class="icon">
-                    <div class="btn-section">| Statistics</div>
+                    <div class="btn-label">| Statistics</div>
                 </div>
                 <div class="btn" onclick="window.location.href = 'home.html';">
                     <img alt="GoMar Logout" src="../resources/logout-icon.svg" class="icon">
-                    <div class="btn-section">| Log out</div>
+                    <div class="btn-label">| Log out</div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="central-container scrollable">
-        <div class="title">
-            Friendships
-        </div>
-        <div class="description">
-            <ul>
-                <li>
-                    <div class="title-of-article">Friendships nowadays</div>
-                    <p class="links">(Click on the image if you want to visit our resources.) </p>
-                    <a href="https://medium.com/@nlee8989/true-friendship-the-very-definition-changing-in-modern-day-society-528cce8a09c2">
-                        <img class="image" src="../resources/truefriendship.png">
-                    </a>
-                   
-                </li>
-                <li>
-                    <div class="title-of-article">Modern friendships</div>
-                    <a href="https://www.theguardian.com/lifeandstyle/2014/oct/31/column-change-life-modern-friendship-oliver-burkeman">
-                        <img class="image" src="../resources/modernfriendship.png">
-                    </a>
+    <div class="container">
+        <div class="central-container scrollable">
+            <div class="title">
+                Friendships
+            </div>
+            <div class="description">
+                <ul>
+                    <li>
+                        <div class="title-of-article">Friendships nowadays</div>
+                        <p class="links">(Click on the image if you want to visit our resources.) </p>
+                        <a
+                            href="https://medium.com/@nlee8989/true-friendship-the-very-definition-changing-in-modern-day-society-528cce8a09c2">
+                            <img class="image" src="../resources/truefriendship.png">
+                        </a>
 
-                </li>
-                <li>
-                    <div class="title-of-article">The importance of friends</div>
-                    <a href="https://www.psychologytoday.com/us/blog/in-flux/201605/the-importance-friends">
-                        <img class="image" src="../resources/importanceoffriendship.png">
-                    </a>
-                </li>
-                <li>
-                    <div class="title-of-article">International day of friendship</div>
-                    <a href="https://learnenglish.britishcouncil.org/general-english/magazine/international-day-of-friendship">
-                        <img class="image" src="../resources/internationaldayofriendship.png">
-                    </a>
-                </li>
-            </ul>
+                    </li>
+                    <li>
+                        <div class="title-of-article">Modern friendships</div>
+                        <a
+                            href="https://www.theguardian.com/lifeandstyle/2014/oct/31/column-change-life-modern-friendship-oliver-burkeman">
+                            <img class="image" src="../resources/modernfriendship.png">
+                        </a>
+
+                    </li>
+                    <li>
+                        <div class="title-of-article">The importance of friends</div>
+                        <a href="https://www.psychologytoday.com/us/blog/in-flux/201605/the-importance-friends">
+                            <img class="image" src="../resources/importanceoffriendship.png">
+                        </a>
+                    </li>
+                    <li>
+                        <div class="title-of-article">International day of friendship</div>
+                        <a
+                            href="https://learnenglish.britishcouncil.org/general-english/magazine/international-day-of-friendship">
+                            <img class="image" src="../resources/internationaldayofriendship.png">
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
