--- a/html/test.html
+++ b/html/test.html
@@ -16,35 +16,37 @@
             <div class="right-section">
                 <div class="btn" onclick="window.location.href = 'statistics.html';">
                     <img alt="GoMar Statistics" src="../resources/statistics-icon.svg" class="icon">
-                    <div class="btn-section">| Statistics</div>
+                    <div class="btn-label">| Statistics</div>
                 </div>
                 <div class="btn" onclick="window.location.href = 'home.html';">
                     <img alt="GoMar Logout" src="../resources/logout-icon.svg" class="icon">
-                    <div class="btn-section">| Log out</div>
+                    <div class="btn-label">| Log out</div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="central-container scrollable">
-        <div class="quiz-question">
-            <p class="question">
-                How should we behave at the restaurant?
-            </p>
-        </div>
-        <div class="quiz-selector">
-            <div class="answer">
-                <div class="icon">
-                </div>
-                <span class="sentence">We should follow a certain etiquette</span>
+    <div class="container">
+        <div class="central-container scrollable">
+            <div class="quiz-question">
+                <p class="question">
+                    How should we behave at the restaurant?
+                </p>
             </div>
-            <div class="answer">
-                <div class="icon">
+            <div class="quiz-selector">
+                <div class="answer">
+                    <div class="icon">
+                    </div>
+                    <span class="sentence">We should follow a certain etiquette</span>
                 </div>
-                <span class="sentence">We should behave normally</span>
+                <div class="answer">
+                    <div class="icon">
+                    </div>
+                    <span class="sentence">We should behave normally</span>
+                </div>
             </div>
-        </div>
-        <div>
-            <span class="answer-btn" onclick="window.location.href = 'test.html';">Answer</span>
+            <div>
+                <span class="answer-btn" onclick="window.location.href = 'test.html';">Answer</span>
+            </div>
         </div>
     </div>
 </body>
