Add a statistics page and change the navbar from category page

--- a/html/category.html
+++ b/html/category.html
@@ -15,13 +15,13 @@
         <div class="container">
             <img alt="GoMar Logo" src="../resources/logo.svg" class="logo">
             <div class="right-section">
-                <div class="btn" onclick="window.location.href = 'login.html';">
-                    <img alt="GoMar Login" src="../resources/login-icon.svg" class="icon">
-                    <div class="btn-label">| Login</div>
+                <div class="btn" onclick="window.location.href = 'statistics.html';">
+                    <img alt="GoMar Statistics" src="../resources/statistics-icon.svg" class="icon">
+                    <div class="btn-label">| Statistics</div>
                 </div>
-                <div class="btn" onclick="window.location.href = 'register.html';">
-                    <img alt="GoMar Register" src="../resources/register-icon.svg" class="icon">
-                    <div class="btn-label">| Register</div>
+                <div class="btn" onclick="window.location.href = 'home.html';">
+                    <img alt="GoMar Logout" src="../resources/logout-icon.svg" class="icon">
+                    <div class="btn-label">| Log out</div>
                 </div>
             </div>
         </div>
