Improve information pages

--- a/html/category.html
+++ b/html/category.html
@@ -38,7 +38,7 @@
               
                 <div class="slides">
                   <div id="slide-1">
-                    <a href="information.html">
+                    <a href="academic.html">
                         <img class="image" src="../resources/academic1.jpg">
                     </a>
                     <div class="category-title">Academic</div>
@@ -47,7 +47,7 @@
                     <!-- 1 -->
                   </div>
                   <div id="slide-2">
-                    <a href="information.html">
+                    <a href="family.html">
                         <img class="image" src="../resources/family2.jpg">
                     </a>
                     <div class="category-title">Family</div>
@@ -56,7 +56,7 @@
                     <!-- 2 -->
                   </div>
                   <div id="slide-3">
-                    <a  href="information.html">
+                    <a  href="group.html">
                         <img class="image" src="../resources/group.jpg">
                     </a>
                     <div class="category-title">Group</div>
@@ -65,7 +65,7 @@
                     <!-- 3 -->
                   </div>
                   <div id="slide-4">
-                    <a href="information.html">
+                    <a href="society.html">
                         <img class="image" src="../resources/society.jpg">
                     </a>
                     <div class="category-title">Society</div>
@@ -74,7 +74,7 @@
                     <!-- 4 -->
                   </div>
                   <div id="slide-5">
-                    <a href="information.html">
+                    <a href="work.html">
                         <img class="image" src="../resources/work.jpg">
                     </a>
                     <div class="category-title">Work</div>
