--- a/html/test.html
+++ b/html/test.html
@@ -44,8 +44,127 @@
                     <span class="sentence">We should behave normally</span>
                 </div>
             </div>
+            <div class="quiz-question">
+                <p class="question">
+                    How should we behave at the restaurant?
+                </p>
+            </div>
+            <div class="quiz-selector">
+                <div class="answer">
+                    <div class="icon">
+                    </div>
+                    <span class="sentence">We should follow a certain etiquette</span>
+                </div>
+                <div class="answer">
+                    <div class="icon">
+                    </div>
+                    <span class="sentence">We should behave normally</span>
+                </div>
+            </div>
+            <div class="quiz-question">
+                <p class="question">
+                    How should we behave at the restaurant?
+                </p>
+            </div>
+            <div class="quiz-selector">
+                <div class="answer">
+                    <div class="icon">
+                    </div>
+                    <span class="sentence">We should follow a certain etiquette</span>
+                </div>
+                <div class="answer">
+                    <div class="icon">
+                    </div>
+                    <span class="sentence">We should behave normally</span>
+                </div>
+            </div>
+            <div class="quiz-question">
+                <p class="question">
+                    How should we behave at the restaurant?
+                </p>
+            </div>
+            <div class="quiz-selector">
+                <div class="answer">
+                    <div class="icon">
+                    </div>
+                    <span class="sentence">We should follow a certain etiquette</span>
+                </div>
+                <div class="answer">
+                    <div class="icon">
+                    </div>
+                    <span class="sentence">We should behave normally</span>
+                </div>
+            </div>
+            <div class="quiz-question">
+                <p class="question">
+                    How should we behave at the restaurant?
+                </p>
+            </div>
+            <div class="quiz-selector">
+                <div class="answer">
+                    <div class="icon">
+                    </div>
+                    <span class="sentence">We should follow a certain etiquette</span>
+                </div>
+                <div class="answer">
+                    <div class="icon">
+                    </div>
+                    <span class="sentence">We should behave normally</span>
+                </div>
+            </div>
+            <div class="quiz-question">
+                <p class="question">
+                    How should we behave at the restaurant?
+                </p>
+            </div>
+            <div class="quiz-selector">
+                <div class="answer">
+                    <div class="icon">
+                    </div>
+                    <span class="sentence">We should follow a certain etiquette</span>
+                </div>
+                <div class="answer">
+                    <div class="icon">
+                    </div>
+                    <span class="sentence">We should behave normally</span>
+                </div>
+            </div>
+            <div class="quiz-question">
+                <p class="question">
+                    How should we behave at the restaurant?
+                </p>
+            </div>
+            <div class="quiz-selector">
+                <div class="answer">
+                    <div class="icon">
+                    </div>
+                    <span class="sentence">We should follow a certain etiquette</span>
+                </div>
+                <div class="answer">
+                    <div class="icon">
+                    </div>
+                    <span class="sentence">We should behave normally</span>
+                </div>
+            </div>
+            <div class="quiz-question">
+                <p class="question">
+                    How should we behave at the restaurant?
+                </p>
+            </div>
+            <div class="quiz-selector">
+                <div class="answer">
+                    <div class="icon">
+                    </div>
+                    <span class="sentence">We should follow a certain etiquette</span>
+                </div>
+                <div class="answer">
+                    <div class="icon">
+                    </div>
+                    <span class="sentence">We should behave normally</span>
+                </div>
+            </div>
             <div>
-                <span class="answer-btn" onclick="window.location.href = 'test.html';">Answer</span>
+                <span class="answer-btn" onclick="window.location.href = 'test.html';">Sent your answers</span>
             </div>
         </div>
     </div>
