Redirect pages after login and register

--- a/html/login.html
+++ b/html/login.html
@@ -28,7 +28,7 @@
 					<input type="password" placeholder="Enter Password" name="password" required> 
 						
             <p class="p">
-                 <input class="button" type="submit" onclick="window.location.href = 'home.html';" value="Log in"/> or 
+                 <input class="button" type="submit" onclick="window.location.href = 'landing.html';" value="Log in"/> or 
                  <input class="button"  type="submit" onclick="window.location.href = 'register.html';" value="Register"/>
 				 <label >
                       <input type="checkbox" checked="checked" name="remember" style="text-align:center;"> Remember me
