--- a/html/profile.html
+++ b/html/profile.html
@@ -75,7 +75,7 @@
                         <input type="password" placeholder="Confirm Password" name="password" required> 
                 </form>	
                 <input class="button" id="prev"type="submit" onclick="window.location.href ='#slider-2';" value="Back">
-                <input class="button" id="next"type="submit" onclick="window.location.href ='login.html';" value="Next">		
+                <input class="button" id="next"type="submit" onclick="window.location.href ='landing.html';" value="Next">		
             </div>
         </div>
 
