update information pages

--- a/html/society.html
+++ b/html/society.html
@@ -13,7 +13,7 @@
 <body>
     <div class="navbar">
         <div class="container">
-            <img alt="GoMar Logo" src="../resources/logo.svg" class="logo">
+            <img alt="GoMar Logo" src="../resources/logo.svg" class="logo" onclick="window.location.href = 'landing.html';">
             <div class="right-section">
                 <div class="btn" onclick="window.location.href = 'statistics.html';">
                     <img alt="GoMar Statistics" src="../resources/statistics-icon.svg" class="icon">
@@ -33,6 +33,12 @@
             </div>
             <div class="description">
                 <ul>
+                    <li>
+                        <div class="test-div">
+                            <p>If you want to test your ability, take a test. Or read our recomandation before.</p>
+                            <span class="btnn" onclick="window.location.href = 'test.html';">Test</span>
+                        </div>
+                    </li>
                     <li>
                         <div class="title-of-article">Society</div>
                         <p class="links">(Click on the image if you want to visit our resources.) </p>
@@ -62,10 +68,6 @@
                         </a>
                     </li>
                 </ul>
-                <div class="test-div">
-                    <p>If you want to test your ability, do one our test.</p>
-                    <span class="btnn" onclick="window.location.href = 'test.html';">Test</span>
-                </div>
             </div>
         </div>
     </div>
