--- a/html/user.html
+++ b/html/user.html
@@ -13,7 +13,7 @@
 <body>
     <div class="navbar">
         <div class="container">
-            <img alt="GoMar Logo" src="../resources/logo.svg" class="logo">
+            <img alt="GoMar Logo" src="../resources/logo.svg" class="logo" onclick="window.location.href = 'landing.html';">
             <div class="right-section">
                 <div class="btn" onclick="window.location.href = 'statistics.html';">
                     <img alt="GoMar Statistics" src="../resources/statistics-icon.svg" class="icon">
