center test button

--- a/html/profile.html
+++ b/html/profile.html
@@ -35,7 +35,6 @@
                             <option value="male">Male</option>
                             <option value="female">Female</option>
                         </select>
-                        <!-- <input type="password" placeholder="Confirm Password" name="password" required>  -->
                     
                 </form>		
                 <input class="button" id="next"type="submit" onclick="window.location.href ='#slider-2';" value="Next">
@@ -48,7 +47,7 @@
                         <label><b>Social status</b></label>
                         <input type="text" placeholder=" Enter status" name="status" required>
                         
-                        <label><b>Employed/Unemployed</b></label>
+                        <label><b>Employee</b></label>
                         <select id="job">
                             <option value="yes">Yes</option>
                             <option value="no">No</option>
