--- a/html/raport.html
+++ b/html/raport.html
@@ -1,52 +1,57 @@
-<!doctype html>
 
-<meta charset="utf-8">
-<title>GoMaR</title>
-
+<!DOCTYPE html>
+<html lang="ro-RO">
 <head>
-    <h1>GoMaR</h1>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>GoMaR - Good Manners Recommender - Raport </title>
+
 </head>
-
 <body>
-    <div role="contentinfo">
-        <section typeof="sa:AuthorsList">
-            <h2>Contributors</h2>
-            <ul>
-                <span typeof="sa:ContributorRole">
-                    <li property="schema:contributor">Alexandru Vasile</li>
-                </span>
-                <span typeof="sa:ContributorRole">
-                    <li property="schema:contributor">Asandului Ilinca</li>
-                </span>
-                <span typeof="sa:ContributorRole">
-                    <li property="schema:contributor">Dascalu Marilena</li>
-                </span>
-            </ul>
-    </div>
-    <div>
-        <section>
-            <h3>
-                Aplicatia este destinata persoanelor de toate varstele si doreste informarea acestor la un mod de
-                comportament cat mai potrivit in diferite circumstate, cum ar fi : iesitul cu prieteni, compartamentul cu
-                familia, comportamentul intr-un grup, comportamentul intr-un centru de invatamant, etc.Prima pagina a
-                aplicatie descrie despre ce este vorba in aplicatie si cum se utilizeaza. Ca utilizator care nu esti
-                inregistrat nu pot utilize aplicatie, cid oar prima pagina. Primul pas este inregistrarea, unde
-                utilizatorul isi alege un nume de utilizator, isi noteaza adresa de e-mail, si o parola care trebuie
-                confirmata.Etapa a doua este cea de in care utilizatorul completeaza niste date personale, cum ar fi
-                numele, data nasterii, nivelul de studii, job-ul, etapa ce este obligatorie pentru orice nou venit. Dupa
-                aceasta utilizatorul poate sa foloseasca aplicatia in intregime. Exista o pagina de categorii, cum ar fi
-                : prieteni, mediul academic, grupuri, etc., unde utilizatorul isi poate alege una dintre aceste
-                categorii, poate citi anumite articole, sau ce este scris pe pagina noastra, iar la final isi poate
-                testa cunostiintele prin intermediul unui test, unde fiecare intrebare este cotata cu un numar de
-                puncte, in functie de dificultatea intrebarii. Exista, de asemenea, si o pagina destinata statisticilor,
-                unde in functie de categoria alease se va afisa scorul primiilor 10 cei mai buni utilizatori si numele
-                lor. O alta pagina a aplicatiei este cea de informatii, care sugereaza diverse link-uri catre articole
-                demne de a fi citite. Pentru administratorii contului exista o pagina speciala, accessata doar de ei,
-                unde pot modifica anumite aspect, spre exemplu : pot adauga noi link-uri catre articole, pot adauga
-                intrebari noi in baza de date, etc.
-            </h3>
-        </section>
-    </div>
-</body>
+<header>
+    <h1>GoMaR - Good Manners Recommender  - Raport </h1>
+</header>
+<article id="what" typeof="schema:ScholarlyArticle" resource="#">
+    <section id="introducere">
+        <h3>Introducere</h3>
+        <p>Scopul acestei pagini este de a descrie progresul proiectului.</p>
+    </section>
 
+    <section id="structura">
+        <h3>Prototip interfeței web</h3>
+        <p>Pentru prima parte a proiectului (P), am realizat partea de interfața web, astfel încât să respecte funcționalitățile esențiale ale proiectului, folosind HTML și CSS. </p>
+        <h3>Arhitectura aplicației</h3>
+        <p>Următoarea partea a fost să realizăm o arhitectură a proiectului, am construit arhitectura de ansamblu 
+            a aplicației. Am decis ce tehnologii vom folosi în continuare (pentru partea de back-end: PHP,
+            iar pentru baza de date: MySql). Totodată, am realizat diagrama bazei de date, 
+            diagrama de arhitectură, diagrama de clase si use-case-uri aplicației. La final am adaugăt o secțiune cu task-uri,
+            unde am decis fiecare ce va face.
+        </p>
+        <h3>Varianta finala a aplicației web</h3>
+        <p>In etapa finala (S), am implementat funcționalitățile aplicației, am făcut legătura dintre partea de back-end 
+            și partea de front-end și am construit baza de date.</p>
+        <p>Astfel, un user va putea să : </p>
+        <ul>
+            <li>să citeascî informații despre o anumită categorie aleasă</li>
+            <li>să-și teste nivelul de cunoștiințe la o anumită categorie</li>
+            <li>să-și vadă scorul în raport cu ceilalți useri</li>
+        </ul>
+    </section>
+
+    <section id="management">
+        <h3>Managementul proiectului</h3>
+        <p>Pentru gestionarea codului sursă am ales platforma GitHub, iar link-ul către repository-ul nostru se află în partea de jos a paginii, în footer.</p>
+        <p>Pentru partea de front-end paginile au fost împărțite în mod egal între cei doi membri ai echipei, precum și diagramele necesare pentru arhitectura</p>
+        <p>Pentru partea de back-end, de asemenea, task-urile au fost împățite în mod egal, ajutându-ne reciproc în cazul în care apăreau dificultăți.</p>
+    </section>
+
+</article>
+<footer>
+    <p>
+        <a href = "https://profs.info.uaic.ro/~busaco/teach/courses/web/">Tehnologii Web</a> |
+        <a href="https://github.com/AsanduluiIlinca/GoMaR">Github Repository</a> |
+        <a href="https://www.info.uaic.ro/en/home-page-2/">UAIC - Faculty of Computer Science</a>
+    </p>
+</footer>
+</body>
 </html>
