try to update connection to database

--- a/html/home.html
+++ b/html/home.html
@@ -19,7 +19,7 @@
                     <img alt="GoMar Login" src="../resources/login-icon.svg" class="icon">
                     <div class="btn-label">| Login</div>
                 </div>
-                <div class="btn" onclick="window.location.href = 'register.html';">
+                <div class="btn" onclick="window.location.href = 'register.php';">
                     <img alt="GoMar Register" src="../resources/register-icon.svg" class="icon">
                     <div class="btn-label">| Register</div>
                 </div>
