--- a/html/academic.html
+++ b/html/academic.html
@@ -40,11 +40,11 @@
                         </div>
                     </li>
                     <li>
-                        <div class="title-of-article">The academic environment</div>
+                        <div class="title-of-article">Academic meaning</div>
                         <p class="links">(Click on the image if you want to visit our resources.) </p>
                         <a
-                            href="https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1600-0579.2007.00494.x">
-                            <img class="image" src="../resources/theAcademicEnvironment.png">
+                            href="https://www.merriam-webster.com/dictionary/academic">
+                            <img class="image" src="../resources/academic-meaning.png">
                         </a>
 
                     </li>
