improve family page

--- a/html/family.html
+++ b/html/family.html
@@ -65,7 +65,7 @@
                     <li>
                         <div class="title-of-article">What does family mean to you?</div>
                         <a
-                            href="https://medium.com/sandbox/what-does-family-mean-for-you-and-how-has-it-shaped-you-8cbc1aaaee02">
+                            href="https://www.travelance.ca/blog/family-mean/">
                             <img class="image" src="../resources/what-family-meaning.png">
                         </a>
                     </li>
