--- a/html/home.html
+++ b/html/home.html
@@ -15,7 +15,7 @@
         <div class="container">
             <img alt="GoMar Logo" src="../resources/logo.svg" class="logo">
             <div class="right-section">
-                <div class="btn" onclick="window.location.href = 'login.html';">
+                <div class="btn" onclick="window.location.href = 'login.php';">
                     <img alt="GoMar Login" src="../resources/login-icon.svg" class="icon">
                     <div class="btn-label">| Login</div>
                 </div>
